--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ a:active {
 <section> <!-- main -->
    <section> <h3 id = "week_1"> [190904] 제 1주 - 출력 </a></h3>
       <ul style="list-style-type:circle">
-         <li><a href="Hee0203.github.io/java/week_1/test.html" target="_blank"> Ex1 </a></li>
+         <li><a href="Hee0203.github.io/java/week_1/test.html" > Ex1 </a></li>
           </ul>
    </section>   
    <section> <h3 id = "week_2"> [190911] 제 2주 - 출력 </a></h3>
